# sqlite-shift

./: README.md  pyproject.toml  setup.py
sqlite-shift/: __init__.py  main.py
sqlite-shift/core/: base_migration.py  manager.py
sqlite-shift/tests/: test_manager.py
sqlite-shift/tests/resources/: migrations.ini
sqlite-shift/tests/resources/schema_migrations/: 001_initial.py  002_add_foriegn_key.py
sqlite_shift/: base_migration.py  cli.py  main.py  manager.py
tests/: conftest.py  migrations.ini  test_manager.py
tests/schema_migrations/: 001_initial.py  002_add_foriegn_key.py
